--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 *{
-    font-family: roboto;
-    src: url(https://fonts.google.com/specimen/Roboto);
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
@@ -147,6 +146,7 @@ body{
 
 
 .playInfo{
+    border: 1px solid red;
     margin-left: 15px;
     width: 100%;
     font-size: 11pt;
@@ -156,6 +156,7 @@ body{
     text-align: left;
 }
 .playTitle{
+    border: 1px solid blue;
     font-size: 18pt;
 }
 .playSeparator{
@@ -167,6 +168,7 @@ body{
 }
 
 .readMoreFrame{
+    border: 1px solid blue;
     display: flex;
     align-items: center;
     /* border: 1px solid green; */
