--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body{
 
 
 .playInfo{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-left: 15px;
     width: 100%;
     font-size: 11pt;
@@ -156,7 +156,7 @@ body{
     text-align: left;
 }
 .playTitle{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     font-size: 18pt;
 }
 .playSeparator{
@@ -168,7 +168,7 @@ body{
 }
 
 .readMoreFrame{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: flex;
     align-items: center;
     /* border: 1px solid green; */
